# bmall20

./: app.py  app_time_fix_v5 (1).py  app_time_fix_v6.py  autosuggest_v2.py  es_idx.py  main_search_api.py  sample_jso2.json  sample_json_data.json  utils.py  vv
data/: smaple.json
install-prediction-pipeline/: .gitignore  Dockerfile  Makefile  README.md  conftest.py  pyproject.toml  requirements.txt
install-prediction-pipeline/config/: config.yaml
install-prediction-pipeline/docs/: DESIGN.md
install-prediction-pipeline/scripts/: eda.py  example_request.py  generate_synthetic_data.py
install-prediction-pipeline/src/ipm/: __init__.py  config.py  data.py  featurizer.py  metrics.py  model.py  schema.py  serve.py  train.py
install-prediction-pipeline/tests/: test_featurizer.py  test_pipeline.py
